# countries-frontend

./: .gitignore  Dockerfile  README.md  entrypoint  package-lock.json  package.json  pyproject.toml  requirements.txt
.docker/: Dockerfile  entrypoint
.github/workflows/: gcr-deploy.yml
backend/: google_storages.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json
frontend/config/: webpack.config.prod.js
frontend/public/: index.html
frontend/src/components/: App.js
frontend/src/reducers/: map.js
public/: index.html
src/: api.js  index.js
src/actions/: helpers.js  map.js  user.js
src/components/: App.js
src/components/Header/: Header.js  Header.module.scss
src/components/Layout/: Layout.js
src/components/Notifications/: Notifications.module.scss
src/components/Sidebar/: Sidebar.js
src/components/Sidebar/LinksGroup/: LinksGroup.js  LinksGroup.module.scss
src/components/Widget/: Widget.js
src/pages/dashboard/: Dashboard.js  utils.js
src/pages/dashboard/components/: ProgressStats.js
src/pages/dashboard/components/Map/: Map.js  Map.module.scss
src/pages/dashboard/components/ResultsModal/: Results.module.scss  ResultsModal.js  package.json
src/pages/freeGuessing/: FreeGuessing.js  package.json  utils.js
src/pages/freeGuessing/components/: TopScores.js
src/pages/guess/: Guess.js  package.json
src/pages/login/: Login.js
src/pages/randomMap/: RandomMap.js  package.json
src/pages/randomMap/components/: ProgressStats.js
src/pages/register/: Register.js
src/reducers/: auth.js  index.js  map.js
(+16 files in other folders)
