[tool.poetry]
name = "country-guesser"
version = "0.1.0"
description = ""
authors = ["pradan.dev <contact@pradan.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
djongo = "^1.3.6"
dnspython = "^2.2.1"
pymongo = "3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
